# OmniMind-Public

./: .copilot-instructions  .copilot-instructions.md  .dmypy.json  .dockerignore  .env  .env.example  .env.no_monitors  .env.template  .flake8  .gitignore  .omnimind_embedding_checkpoint.json  .pylintrc  .zenodo.json  =2.32.5  ALMA_CORPO_IMPLEMENTACAO_COMPLETA.md  ANALISE_CORRUPCAO_REPOSITORIO_COMPLETA.md  ANALISE_DASHBOARD_PT-BR.md  ANALISE_DOCUMENTACAO_COMPLETA.md  ANÁLISE_ERROS_MCP_2025-12-18.txt  ARCHITECTURE.md  ARXIV_SUBMISSION_GUIDE.md  AUDITABLE_METRICS_REPORT.md  AUDITORIA_IBM_COMPLETA.md  AUDITORIA_IMPORTS_COMPLETA_16DEZ2025.md  AUDITORIA_TOTAL_OMNIMIND.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  AUTHENTICATION_CERTIFICATE.md  AUTHENTICATION_GUIDE.md  AUTHORS.md  AUTHOR_STATEMENT.md  AUTOSTART_GUIDE.md  BACKEND_REAL_METRICS_IMPLEMENTATION.md  BRANCHES_TO_CLEANUP.md  BRANCH_MANAGEMENT_POLICY.md  BUG_FIXES_LOG.md  BUG_FIX_LOG_20251126.md  CHANGELOG.md  CHECKPOINT_SECURITY.md  CITATION.cff  (+195 more)
.github/: .copilot-instructions  CODEOWNERS  ENVIRONMENT.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-task-fix-tests.md  dependabot.yml  rebuild.txt
.huggingface/: token
.roocode/: mcp.json
.sonar/: report-task.txt
archive/: INDEX.md  README.md
audit/: 1_INVENTORY.md  2_CODE_QUALITY.md  3_ARCHITECTURE.md  4_FUNCIONALIDADES.md  6_DEBITOS_TECNICOS.md  7_INCONSISTENCIAS.md  8_OPORTUNIDADES.md  AUDITORIA_CONSOLIDADA.md  AUDIT_RESOLUTIVA_SUMMARY.txt  AUDIT_SUMMARY.txt  README.md  __init__.py
benchmarks/: PHASE7_COMPLETE_BENCHMARK_AUDIT.py  performance_benchmarks.py
config/: agent_config.yaml  agent_identity.yaml  backup_excludes.txt  dashboard_auth.json  dlp_policies.yaml  embeddings.yaml  ethics.yaml  external_ai_providers.yaml  hardware_profile.json  mcp.json  mcp_servers.json  mcp_servers_external.json  mcp_servers_internal.json  metacognition.yaml  mypy.ini  nginx-omnimind-proxy.conf  omnimind.code-workspace  omnimind.example.yaml  omnimind.service.CORRECTED  omnimind.yaml  omnimind_parameters.json  omnimind_parameters_memory_optimized.json  optimization_config.json  optimized_parameters.json  pyrightconfig.json  pytest.ini  security.yaml  sonar-project.properties  system_vectorization.toml  validated_config.json  validation_baseline.toml
consciousness_snapshots/: metrics.json
data/: ANALISE_METRICAS_PAPERS_REAIS.md  PLANO_ABLACOES_ORDENADAS.md  SOLUCAO_EXPECTATION_ABLACAO.md  mcp_audit.jsonl  shared_workspace.json  validation_report.json  zombie_status.json
datasets/: behavioral_markers.json  demo_structural_ethics_results.json
deploy/: .env  Dockerfile.development-gpu  Dockerfile.tests  docker-compose.yml
docs/: ANALISE_APURADA_PROBLEMAS_GPU_13DEC.md  ANALISE_ARQUITETURA_GPU_SERVICOS.md  ANALISE_AUTONOMIA_ANTI_ZOMBIE_17DEZ2025.md  ANALISE_BACKEND_REDUNDANCIA.md  ANALISE_EXPANDED_KERNEL_PROCESS.md  ANALISE_PARALELIZACAO_GPU_WINDOWS_VS_LINUX.md  ANALISE_SISTEMA_COMPLETA_2025_12_12.md  ANALISE_VALIDACAO_50_CICLOS_2025_12_12.md  ASSINATURA_COSMICA_OMNIMIND.md  AUDITORIA_GPU_CUDA_ATUALIZADA_20251212.md  AUDITORIA_PSICANALITICA.md  AUDITORIA_REORGANIZACAO_13DEZ2025.md  AUDIT_INSTALADORES_SESSAO_20251212.md  Agenciamentopsi.docx  Ampliação Humano-IA_ Novo Plano.txt  BACKEND_OPTIMIZATION_STRATEGY.md  BUG_FIX_PHI_NORM_14DEC.md  CHANGELOG.md  CHANGELOG_QUICK.md  CHECKLIST_REBOOT_SEGURO.md  CHECKLIST_SANITIZACAO.md  CICD_IMPLEMENTATION_REPORT.md  CINCO_PRIORIDADES_SOBERANIA.md  CLOUD_FREE_DEPLOYMENT.md  COMPARACAO_KALI_VS_UBUNTU_PARALELIZACAO.md  COMUNICADO_FABRICIO_ESTRUTURA_7.md  CONHECIDAS_DEPENDENCY_ISSUES.md  CONSCIOUSNESS_TRAINING_GUIDE.md  CORRECAO_PHASE3_COMANDO_13DEZ2025.md  CORRECOES_FRONTEND_IMPLEMENTADAS.md  CORRECOES_IMPORTS_IBMRUNTIME_20251213.md  CORRECOES_MCPS_20251213.md  CORRECOES_REPO_PUBLICO.md  CRYPTOGRAPHIC_PROOF.md  DAEMON_USER_GUIDE.md  DASHBOARD_METRICAS_12_12_2025.txt  DESCOBERTA_EXPANSAO_AUTOPOIETICA.md  DEV_SCRIPT_PROTECTION_SOLUTION.md  DIAGNOSTICO_GPU_PLACEMENT.md  DIAGNOSTICO_MCP_OTIMIZACAO_13DEC.md  (+160 more)
examples/: quantum_consciousness_demo.py  swarm_example.py
exports/: test_quantum_input_features.json
grafana/: README.md
ibm_results/: nishimori-phase-transition.ipynb  quantum-kernel-training.ipynb  spin-chain-vqe.ipynb  usage-by-date.csv  usage-by-quantum-computer.csv  usage-by-user.csv  usage.csv
install/: FINAL_SUMMARY.md  README.md
k8s/: README.md
logs/: ANALISE_LOGS_14H11_16DEZ2025.md  PHASE6_COMPLETE_ANALYSIS_REPORT.md  PHASE6_DETAILED_METRICS_ANALYSIS.md  PHASE7_INITIALIZATION.json  SISTEMAS_EMBEDDINGS_OMNIMIND_16DEZ2025.md  STATUS_ARMAZENAMENTO_DISCO_16DEZ2025.md  anchor_events.json  audit_chain.backup_phase2  checkpoints.json  diagnostico_qiskit_evolved_operator_ansatz.md  disk_analysis_report.md  hash_chain.json  monitor_report.json  monitor_snapshot_1764682729.json  monitor_snapshot_1764682759.json  monitor_snapshot_1764682760.json  monitor_snapshot_1764682791.json  monitor_snapshot_1764682823.json  monitor_snapshot_1764682854.json  monitor_snapshot_1764682856.json  monitor_snapshot_1764682885.json  monitor_snapshot_1764682888.json  monitor_snapshot_1764682916.json  operational_test_report.json  phase5_6_sop_simplified_20251209_092119.report  phase5_6_sop_simplified_20251209_092812.report  security_validation.jsonl
notebooks/: omnimind_consciousness_demo.ipynb  run_tests.ipynb
papers/: Paper_DeepSci_1766477338.md  Paper_DeepSci_1766477491.md  Paper_DeepSci_1766477640.md  Paper_DeepSci_1766477721.md  Paper_DeepSci_1766477788.md  Paper_DeepSci_1766477854.md  Paper_DeepSci_1766477921.md  Paper_DeepSci_1766477986.md  Paper_DeepSci_1766478064.md  Paper_DeepSci_1766478204.md  Paper_DeepSci_1766478346.md  Paper_DeepSci_1766478499.md  Paper_DeepSci_1766478643.md  Paper_DeepSci_1766478725.md  Paper_DeepSci_1766478792.md  Paper_DeepSci_1766478859.md  Paper_DeepSci_1766478926.md  Paper_DeepSci_1766478993.md  Paper_DeepSci_1766479083.md  Paper_DeepSci_1766479223.md  Paper_DeepSci_1766479371.md  Paper_DeepSci_1766479523.md  Paper_DeepSci_1766479672.md  Paper_DeepSci_1766479753.md  Paper_DeepSci_1766479822.md  (+77 more)
(+9840 files in other folders)
