[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnimind"
version = "0.1.0"
description = "Autonomous AI system with psychoanalytic decision-making"
readme = "README.md"
authors = [
  { name = "OmniMind Team", email = "contact@omnimind.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "langchain>=1.1.0",
    "langgraph>=1.0.0",
    "langchain-community>=0.4.0",
    "langchain-ollama>=1.0.0",
    "qdrant-client>=1.16.0,<2.0.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.0",
    "rich>=14.0.0",
    "psutil>=7.0.0",
    "PyYAML>=6.0.3",
    "requests>=2.32.0",
    "dbus-python>=1.4.0",
    "structlog>=25.0.0",
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "supabase>=2.24.0",
    "redis>=7.0.0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "prometheus-client>=0.23.0"
]

[project.urls]
"Homepage" = "https://github.com/fahbrain/omnimind"
"Bug Tracker" = "https://github.com/fahbrain/omnimind/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = ["src"]
testpaths = [
    "tests",
]

[tool.pyright]
include = ["src", "scripts"]
extraPaths = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
